<resources>
    <string name="app_name">We Blog</string>
    <string name="add_post">Add Post</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="register">Register</string>
    <string name="done">Done</string>
    <string name="login">Login</string>
    <string name="post">Post</string>
    <string name="likes">Likes</string>
    <string name="_0">0</string>
    <string name="post_description">Post Description</string>
    <string name="post_title">Post Title</string>
    <string name="date_posted">Date Posted</string>
    <string name="time_posted">Time Posted</string>
    <string name="blogger_s_name">Blogger\'s Name</string>
    <string name="delete_post">Delete Post</string>
    <string name="username">Username</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="already_registered_login">Already Registered? Login</string>
    <string name="comments">Comments</string>
    <string name="share">Share</string>
</resources>
