<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:id="@+id/post_card"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="10dp"
    android:layout_margin="10dp"
    app:cardCornerRadius="5dp"
    android:backgroundTint="@color/colorWhite"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/blogger_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/blogger_profile_image"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_margin="5dp"
                    android:src="@drawable/user"/>

                <TextView
                    android:id="@+id/blogger_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/blogger_s_name"
                    android:layout_toEndOf="@id/blogger_profile_image"
                    android:layout_margin="5dp"
                    android:textColor="@color/colorBlack"
                    android:fontFamily="@font/melancholy"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/time_posted"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time_posted"
                    android:layout_toEndOf="@id/blogger_profile_image"
                    android:layout_margin="5dp"
                    android:textColor="@color/colorBlack"
                    android:layout_below="@id/blogger_name"
                    android:fontFamily="@font/melancholy"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/date_posted"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date_posted"
                    android:layout_toEndOf="@id/time_posted"
                    android:layout_margin="5dp"
                    android:textColor="@color/colorBlack"
                    android:layout_below="@id/blogger_name"
                    android:fontFamily="@font/melancholy"
                    android:textSize="16sp"/>
            </RelativeLayout>
            
            <LinearLayout
                android:id="@+id/post_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="10dp">

                <ImageView
                    android:id="@+id/blogger_picture_post"
                    android:layout_width="match_parent"
                    android:layout_height="260dp"
                    android:scaleType="centerCrop"/>

                <TextView
                    android:id="@+id/blogger_post_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/post_title"
                    android:textColor="@color/colorMaroon"
                    android:fontFamily="@font/melancholy"
                    android:textSize="17sp"/>

                <TextView
                    android:id="@+id/blogger_post_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/post_description"
                    android:textColor="@color/colorBlack"
                    android:fontFamily="@font/melancholy"
                    android:textSize="17sp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/blogger_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/like_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@color/colorTransparent"
                    android:src="@drawable/ic_dislike" />

                <TextView
                    android:id="@+id/likes_display"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/melancholy"
                    android:padding="5dp"
                    android:textColor="@color/colorMaroon"
                    android:text="@string/_0"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/melancholy"
                    android:padding="5dp"
                    android:textColor="@color/colorMaroon"
                    android:text="@string/likes" />

                <ImageButton
                    android:id="@+id/comment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@color/colorTransparent"
                    android:src="@drawable/ic_comment" />

                <TextView
                    android:id="@+id/comment_display"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/melancholy"
                    android:padding="5dp"
                    android:textColor="@color/colorMaroon"
                    android:text="@string/_0"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/melancholy"
                    android:padding="5dp"
                    android:textColor="@color/colorMaroon"
                    android:text="@string/comments" />

                <TextView
                    android:id="@+id/share"
                    android:drawableStart="@drawable/ic_share"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/melancholy"
                    android:padding="5dp"
                    android:drawablePadding="5dp"
                    android:textColor="@color/colorMaroon"
                    android:text="@string/share" />
            </LinearLayout>

        </LinearLayout>

</androidx.cardview.widget.CardView>