<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/colorMaroon"
        android:layout_alignParentTop="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/Theme.AppCompat.Light"
        app:logo="@mipmap/ic_the_logo_round"
        app:title="@string/app_name"
        android:fitsSystemWindows="true"
        app:titleMarginStart="20dp"
        app:titleTextAppearance="@style/my_app_title"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tool_bar"
        android:layout_margin="20dp"
        android:padding="20dp">

        <TextView
            android:id="@+id/register_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:layout_centerHorizontal="true"
            android:padding="10dp"
            android:textAllCaps="true"
            android:textSize="24sp"
            android:textColor="@color/colorBlack"
            android:fontFamily="@font/melancholy"/>

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/register_title"
            android:hint="@string/username"
            android:padding="16dp"
            android:inputType="text"
            android:textSize="14sp"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="10dp"
            android:drawablePadding="5dp"
            android:backgroundTint="@color/colorMaroon"
            android:background="@drawable/round_border"
            android:textColorHint="@color/colorWhite"
            android:fontFamily="@font/melancholy"
            android:drawableStart="@drawable/ic_person"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/username"
            android:hint="@string/email_address"
            android:layout_marginTop="20dp"
            android:padding="16dp"
            android:textSize="14sp"
            android:drawablePadding="5dp"
            android:textColor="@color/colorWhite"
            android:backgroundTint="@color/colorMaroon"
            android:drawableStart="@drawable/ic_email"
            android:inputType="textEmailAddress"
            android:background="@drawable/round_border"
            android:textColorHint="@color/colorWhite"
            android:fontFamily="@font/melancholy"
            />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/email"
            android:layout_marginTop="20dp"
            android:hint="@string/password"
            android:padding="16dp"
            android:textSize="14sp"
            android:textColor="@color/colorWhite"
            android:drawablePadding="5dp"
            android:backgroundTint="@color/colorMaroon"
            android:drawableStart="@drawable/ic_security"
            android:inputType="textPassword"
            android:background="@drawable/round_border"
            android:textColorHint="@color/colorWhite"
            android:fontFamily="@font/melancholy"
            />

        <Button
            android:id="@+id/register_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/password"
            android:layout_marginTop="20dp"
            android:text="@string/register"
            android:textStyle="bold"
            android:textColor="@color/colorWhite"
            android:backgroundTint="@color/colorMaroon"
            android:background="@drawable/round_border"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/user_existing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/register_button"
            android:text="@string/already_registered_login"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:textColor="@color/colorBlack"/>
    </RelativeLayout>

</RelativeLayout>